fix: use text link font and letter spacing

--- a/packages/core/src/components/link/link.scss
+++ b/packages/core/src/components/link/link.scss
@@ -20,8 +20,8 @@
   }
 
   &--small {
-    font: var(--text-body-small);
-    letter-spacing: var(--text-body-small-letter);
+    font: var(--text-link-small);
+    letter-spacing: var(--text-link-small-letter);
   }
 
   &--medium {
